@@ -1,6 +1,6 @@
 {% load wagtailadmin_tags %}
 {% load i18n %}
-<nav class="nav-main" role="navigation">
+<nav class="nav-main">
     <ul>
         {{ menu_html }}
 
