@@ -18,7 +18,7 @@
 
     <div class="nice-padding">
         <h2>Contents</h2>
-        <nav role="navigation">
+        <nav>
             <ul class="unlist">
                 <li><a href="#palette">Colour palette</a></li>
                 <li><a href="#accessiblecolours">Accessible colour combinations</a></li>
@@ -507,7 +507,7 @@
                     <div class="dropdown dropdown-button match-width">
                         <input type="button" value="drop down" class="button" />
                         <div class="dropdown-toggle icon icon-arrow-down"></div>
-                        <ul role="menu">
+                        <ul>
                             <li><a href="#">items should not exceed button width</a></li>
                             <li><a href="#">item 2</a></li>
                         </ul>
@@ -518,7 +518,7 @@
                     <div class="dropdown dropdown-button">
                         <input type="button" value="drop down" class="button" />
                         <div class="dropdown-toggle icon icon-arrow-down"></div>
-                        <ul role="menu">
+                        <ul>
                             <li><a href="#">Items in this list do not match button width</a></li>
                             <li><a href="#">item 2</a></li>
                         </ul>
@@ -529,7 +529,7 @@
                     <div class="dropdown dropup dropdown-button match-width">
                         <input type="button" value="drop up" class="button" />
                         <div class="dropdown-toggle icon icon-arrow-up"></div>
-                        <ul role="menu">
+                        <ul>
                             <li><a href="#">item 1</a></li>
                             <li><a href="#">item 2</a></li>
                         </ul>
@@ -540,7 +540,7 @@
                     <div class="dropdown dropup dropdown-button match-width">
                         <button value="drop up" class="button icon icon-view">icon dropup</button>
                         <div class="dropdown-toggle icon icon-arrow-up"></div>
-                        <ul role="menu">
+                        <ul>
                             <li><a href="#">item 1</a></li>
                             <li><a href="#">item 2</a></li>
                         </ul>
@@ -554,7 +554,7 @@
                     <div class="dropdown dropdown-button match-width">
                         <a href="#" class="button" value="drop down">Link button</a>
                         <div class="dropdown-toggle icon icon-arrow-down"></div>
-                        <ul role="menu">
+                        <ul>
                             <li><a href="#">items should not exceed button width</a></li>
                             <li><a href="#">item 2</a></li>
                         </ul>
@@ -579,55 +579,57 @@
                         <div data-dropdown-toggle="" class="o-icon  c-dropdown__toggle  [ icon icon-arrow-down ]"></div>
                     </a>
                     <div class="t-dark">
-                        <ul role="menu" class="c-dropdown__menu  u-toggle  u-arrow u-arrow--tl u-background">
-                            <li class="c-dropdown__item ">
-                                <a href="/admin/pages/2/move/" class="u-link is-live ">
-                                    Move
-                                </a>
-                            </li>
-                            <li class="c-dropdown__item ">
-                                <a href="/admin/pages/2/copy/" class="u-link is-live ">
-                                    Copy
-                                </a>
-                            </li>
-                            <li class="c-dropdown__item ">
-                                <a href="/admin/pages/2/delete/" class="u-link is-live ">
-                                    Delete
-                                </a>
-                            </li>
-                            <li class="c-dropdown__item ">
-                                <a href="/admin/pages/2/unpublish/" class="u-link is-live ">
-                                    Unpublish
-                                </a>
-                            </li>
-                            <li>
-                                <hr class="c-dropdown__divider">
-                            </li>
-                            <li class="c-dropdown__item">
-                                <a href="#" class="u-link is-live">
-                                    <span title="Live" class="c-indicator c-dropdown__indicator"></span>
-                                    Live
-                                </a>
-                            </li>
-                            <li class="c-dropdown__item">
-                                <a href="#" class="u-link is-draft">
-                                    <span title="Draft" class="c-indicator c-dropdown__indicator"></span>
-                                    Draft
-                                </a>
-                            </li>
-                            <li class="c-dropdown__item">
-                                <a href="#" class="u-link is-live+draft">
-                                    <span title="Live + Draft" class="c-indicator c-dropdown__indicator"></span>
-                                    Live + Draft
-                                </a>
-                            </li>
-                            <li class="c-dropdown__item">
-                                <a href="#" class="u-link is-absent">
-                                    <span title="Absent" class="c-indicator c-dropdown__indicator"></span>
-                                    Absent
-                                </a>
-                            </li>
-                        </ul>
+                        <nav aria-label="Inline dropdown menu example">
+                            <ul class="c-dropdown__menu  u-toggle  u-arrow u-arrow--tl u-background">
+                                <li class="c-dropdown__item ">
+                                    <a href="/admin/pages/2/move/" class="u-link is-live ">
+                                        Move
+                                    </a>
+                                </li>
+                                <li class="c-dropdown__item ">
+                                    <a href="/admin/pages/2/copy/" class="u-link is-live ">
+                                        Copy
+                                    </a>
+                                </li>
+                                <li class="c-dropdown__item ">
+                                    <a href="/admin/pages/2/delete/" class="u-link is-live ">
+                                        Delete
+                                    </a>
+                                </li>
+                                <li class="c-dropdown__item ">
+                                    <a href="/admin/pages/2/unpublish/" class="u-link is-live ">
+                                        Unpublish
+                                    </a>
+                                </li>
+                                <li>
+                                    <hr class="c-dropdown__divider">
+                                </li>
+                                <li class="c-dropdown__item">
+                                    <a href="#" class="u-link is-live">
+                                        <span title="Live" class="c-indicator c-dropdown__indicator"></span>
+                                        Live
+                                    </a>
+                                </li>
+                                <li class="c-dropdown__item">
+                                    <a href="#" class="u-link is-draft">
+                                        <span title="Draft" class="c-indicator c-dropdown__indicator"></span>
+                                        Draft
+                                    </a>
+                                </li>
+                                <li class="c-dropdown__item">
+                                    <a href="#" class="u-link is-live+draft">
+                                        <span title="Live + Draft" class="c-indicator c-dropdown__indicator"></span>
+                                        Live + Draft
+                                    </a>
+                                </li>
+                                <li class="c-dropdown__item">
+                                    <a href="#" class="u-link is-absent">
+                                        <span title="Absent" class="c-indicator c-dropdown__indicator"></span>
+                                        Absent
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -640,13 +642,15 @@
                         <div data-dropdown-toggle="" class="o-icon  c-dropdown__toggle  [ icon icon-arrow-down ]"></div>
                     </a>
                     <div class="t-dark">
-                        <ul role="menu" class="c-dropdown__menu  u-toggle  u-arrow u-arrow--tl u-background">
-                            <li class="c-dropdown__item ">
-                                <a href="/admin/pages/2/move/" class="u-link is-live ">
-                                    Move
-                                </a>
-                            </li>
-                        </ul>
+                        <nav aria-label="Dark inline dropdown menu example">
+                            <ul class="c-dropdown__menu  u-toggle  u-arrow u-arrow--tl u-background">
+                                <li class="c-dropdown__item ">
+                                    <a href="/admin/pages/2/move/" class="u-link is-live ">
+                                        Move
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </header>
